--- a/BOSS/VisualStudio/BOSS.vcxproj
+++ b/BOSS/VisualStudio/BOSS.vcxproj
@@ -19,8 +19,11 @@
     <ClInclude Include="..\source\BaseTypes.h" />
     <ClInclude Include="..\source\BOSSAssert.h" />
     <ClInclude Include="..\source\BuildOrder.h" />
-    <ClInclude Include="..\source\CombatSearchBucket.h" />
-    <ClInclude Include="..\source\CombatSearchIntegral.h" />
+    <ClInclude Include="..\source\CombatSearch_BestResponse.h" />
+    <ClInclude Include="..\source\CombatSearch_Bucket.h" />
+    <ClInclude Include="..\source\CombatSearch_BucketData.h" />
+    <ClInclude Include="..\source\CombatSearch_IntegralData.h" />
+    <ClInclude Include="..\source\CombatSearch_Integral.h" />
     <ClInclude Include="..\source\Constants.h" />
     <ClInclude Include="..\source\CombatSearch.h" />
     <ClInclude Include="..\source\BOSS.h" />
@@ -57,10 +60,13 @@
     <ClCompile Include="..\source\CombatSearch.cpp" />
     <ClCompile Include="..\source\BOSS.cpp" />
     <ClCompile Include="..\source\BuildingData.cpp" />
-    <ClCompile Include="..\source\CombatSearchBucket.cpp" />
-    <ClCompile Include="..\source\CombatSearchIntegral.cpp" />
+    <ClCompile Include="..\source\CombatSearch_BestResponse.cpp" />
+    <ClCompile Include="..\source\CombatSearch_Bucket.cpp" />
+    <ClCompile Include="..\source\CombatSearch_BucketData.cpp" />
+    <ClCompile Include="..\source\CombatSearch_IntegralData.cpp" />
     <ClCompile Include="..\source\CombatSearchParameters.cpp" />
     <ClCompile Include="..\source\CombatSearchResults.cpp" />
+    <ClCompile Include="..\source\CombatSearch_Integral.cpp" />
     <ClCompile Include="..\source\Constants.cpp" />
     <ClCompile Include="..\source\BuildOrderSearchGoal.cpp" />
     <ClCompile Include="..\source\DFBB_BuildOrderSearchParameters.cpp" />
