--- a/BOSS/VisualStudio/BOSS_combatsearch.vcxproj
+++ b/BOSS/VisualStudio/BOSS_combatsearch.vcxproj
@@ -13,7 +13,6 @@
   <ItemGroup>
     <ClCompile Include="..\source\BOSSExperiments.cpp" />
     <ClCompile Include="..\source\BOSSVisExperiment.cpp" />
-    <ClCompile Include="..\source\CombatSearchExperiment.cpp" />
     <ClCompile Include="..\source\GUI.cpp" />
     <ClCompile Include="..\source\GUITools.cpp" />
     <ClCompile Include="..\source\BOSS_main.cpp" />
@@ -22,7 +21,6 @@
   <ItemGroup>
     <ClInclude Include="..\source\BOSSExperiments.h" />
     <ClInclude Include="..\source\BOSSVisExperiment.h" />
-    <ClInclude Include="..\source\CombatSearchExperiment.h" />
     <ClInclude Include="..\source\GUI.h" />
     <ClInclude Include="..\source\GUITools.h" />
     <ClInclude Include="..\source\BuildOrderTester.h" />
@@ -92,13 +90,13 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(BWAPI_DIR)/include;$(SDL_IMAGE_DIR)/include;$(SDL_DIR)/include;../source/rapidjson;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4996;4099</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>$(BWAPI_DIR)/lib/BWAPI.lib;$(SolutionDir)\$(Configuration)\BOSS\BOSS.lib;../lib/opengl32.lib;../lib/SDL2.lib;../lib/SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
