BOSS: Build order graphs work

--- a/BOSS/VisualStudio/BOSS.vcxproj
+++ b/BOSS/VisualStudio/BOSS.vcxproj
@@ -19,6 +19,7 @@
     <ClInclude Include="..\source\BaseTypes.h" />
     <ClInclude Include="..\source\BOSSAssert.h" />
     <ClInclude Include="..\source\BuildOrder.h" />
+    <ClInclude Include="..\source\BuildOrderPlot.h" />
     <ClInclude Include="..\source\CombatSearch_BestResponse.h" />
     <ClInclude Include="..\source\CombatSearch_Bucket.h" />
     <ClInclude Include="..\source\CombatSearch_BucketData.h" />
@@ -57,6 +58,7 @@
     <ClCompile Include="..\source\ActionTypeData.cpp" />
     <ClCompile Include="..\source\BOSSAssert.cpp" />
     <ClCompile Include="..\source\BuildOrder.cpp" />
+    <ClCompile Include="..\source\BuildOrderPlot.cpp" />
     <ClCompile Include="..\source\CombatSearch.cpp" />
     <ClCompile Include="..\source\BOSS.cpp" />
     <ClCompile Include="..\source\BuildingData.cpp" />
