--- a/BOSS/VisualStudio/BOSS_main.vcxproj
+++ b/BOSS/VisualStudio/BOSS_main.vcxproj
@@ -98,7 +98,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>$(BWAPI_DIR)/lib/BWAPI.lib;$(SolutionDir)\$(Configuration)\BOSS\BOSS.lib;../lib/opengl32.lib;../lib/SDL2.lib;../lib/SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
