--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
@@ -62,7 +62,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>../BOSS/source;../SparCraft/source;../Source;$(BWTA_DIR)/include;$(BWAPI_DIR)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../BOSS/source;../SparCraft/source;../source;$(BWTA_DIR)/include;$(BWAPI_DIR)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;EXAMPLEAIMODULE_EXPORTS;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -85,7 +85,7 @@
     <ClCompile>
       <Optimization>Full</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>../BOSS/source;../SparCraft/source;../Source;$(BWAPI_DIR)/include;$(BWTA_DIR)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../BOSS/source;../SparCraft/source;../source;$(BWAPI_DIR)/include;$(BWTA_DIR)/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;EXAMPLEAIMODULE_EXPORTS;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -114,104 +114,78 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Source\BOSSManager.cpp" />
-    <ClCompile Include="..\Source\CombatPredictor.cpp" />
+    <ClCompile Include="..\source\BuildingData.cpp" />
+    <ClCompile Include="..\source\BuildingManager.cpp" />
+    <ClCompile Include="..\source\BuildingPlacer.cpp" />
+    <ClCompile Include="..\source\BuildOrderGoalManager.cpp" />
+    <ClCompile Include="..\source\BuildOrderQueue.cpp" />
     <ClCompile Include="..\Source\CombatSimulation.cpp" />
-    <ClCompile Include="..\Source\base\BuildingData.cpp" />
-    <ClCompile Include="..\Source\base\BuildingManager.cpp" />
-    <ClCompile Include="..\Source\base\BuildingPlacer.cpp" />
-    <ClCompile Include="..\Source\base\BuildOrderGoalManager.cpp" />
-    <ClCompile Include="..\Source\base\BuildOrderQueue.cpp" />
-    <ClCompile Include="..\Source\base\ProductionManager.cpp" />
-    <ClCompile Include="..\Source\base\WorkerData.cpp" />
-    <ClCompile Include="..\Source\base\WorkerManager.cpp" />
     <ClCompile Include="..\Source\CombatCommander.cpp" />
     <ClCompile Include="..\Source\Common.cpp" />
+    <ClCompile Include="..\source\DetectorManager.cpp" />
     <ClCompile Include="..\Source\Dll.cpp" />
     <ClCompile Include="..\Source\GameCommander.cpp" />
-    <ClCompile Include="..\Source\HLCombatCommander.cpp" />
-    <ClCompile Include="..\Source\HLManager.cpp" />
-    <ClCompile Include="..\Source\HLSearch.cpp" />
-    <ClCompile Include="..\Source\HLSquad.cpp" />
-    <ClCompile Include="..\Source\HLState.cpp" />
-    <ClCompile Include="..\Source\HLStatistics.cpp" />
-    <ClCompile Include="..\Source\HLTranspositionTable.cpp" />
-    <ClCompile Include="..\Source\HLUnitData.cpp" />
     <ClCompile Include="..\Source\InformationManager.cpp" />
     <ClCompile Include="..\Source\Logger.cpp" />
     <ClCompile Include="..\Source\MapGrid.cpp" />
     <ClCompile Include="..\Source\MapTools.cpp" />
-    <ClCompile Include="..\Source\micromanagement\DetectorManager.cpp" />
-    <ClCompile Include="..\Source\micromanagement\MeleeManager.cpp" />
-    <ClCompile Include="..\Source\micromanagement\MicroManager.cpp" />
-    <ClCompile Include="..\Source\micromanagement\MicroUtil.cpp" />
-    <ClCompile Include="..\Source\micromanagement\RangedManager.cpp" />
-    <ClCompile Include="..\Source\micromanagement\TransportManager.cpp" />
+    <ClCompile Include="..\source\MeleeManager.cpp" />
+    <ClCompile Include="..\source\MicroManager.cpp" />
     <ClCompile Include="..\Source\OpeningBuildOrders.cpp" />
     <ClCompile Include="..\Source\Options.cpp" />
-    <ClCompile Include="..\Source\ReplayVisualizer.cpp" />
-    <ClCompile Include="..\Source\ScoutManager.cpp" />
+    <ClCompile Include="..\source\ProductionManager.cpp" />
+    <ClCompile Include="..\source\RangedManager.cpp" />
+    <ClCompile Include="..\source\ScoutManager.cpp" />
     <ClCompile Include="..\Source\SparCraftManager.cpp" />
     <ClCompile Include="..\Source\Squad.cpp" />
     <ClCompile Include="..\Source\SquadData.cpp" />
     <ClCompile Include="..\Source\StrategyManager.cpp" />
+    <ClCompile Include="..\source\TransportManager.cpp" />
     <ClCompile Include="..\Source\UABAssert.cpp" />
     <ClCompile Include="..\Source\UAlbertaBotModule.cpp" />
     <ClCompile Include="..\Source\UnitCommandData.cpp" />
     <ClCompile Include="..\Source\UnitCommandManager.cpp" />
     <ClCompile Include="..\Source\UnitData.cpp" />
-    <ClCompile Include="..\Source\Visualizer.cpp" />
+    <ClCompile Include="..\source\WorkerData.cpp" />
+    <ClCompile Include="..\source\WorkerManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\BOSSManager.h" />
-    <ClInclude Include="..\Source\CombatPredictor.h" />
+    <ClInclude Include="..\source\BuildingData.h" />
+    <ClInclude Include="..\source\BuildingManager.h" />
+    <ClInclude Include="..\source\BuildingPlacer.h" />
+    <ClInclude Include="..\source\BuildOrderGoalManager.h" />
+    <ClInclude Include="..\source\BuildOrderQueue.h" />
     <ClInclude Include="..\Source\CombatSimulation.h" />
-    <ClInclude Include="..\Source\base\BuildingData.h" />
-    <ClInclude Include="..\Source\base\BuildingManager.h" />
-    <ClInclude Include="..\Source\base\BuildingPlacer.h" />
-    <ClInclude Include="..\Source\base\BuildOrderGoalManager.h" />
-    <ClInclude Include="..\Source\base\BuildOrderQueue.h" />
-    <ClInclude Include="..\Source\base\MetaType.h" />
-    <ClInclude Include="..\Source\base\ProductionManager.h" />
-    <ClInclude Include="..\Source\base\WorkerData.h" />
-    <ClInclude Include="..\Source\base\WorkerManager.h" />
     <ClInclude Include="..\Source\CombatCommander.h" />
     <ClInclude Include="..\Source\Common.h" />
+    <ClInclude Include="..\source\DetectorManager.h" />
     <ClInclude Include="..\Source\DistanceMap.hpp" />
-    <ClInclude Include="..\Source\EnhancedInterface.hpp" />
     <ClInclude Include="..\Source\GameCommander.h" />
-    <ClInclude Include="..\Source\HLCombatCommander.h" />
-    <ClInclude Include="..\Source\HLManager.h" />
-    <ClInclude Include="..\Source\HLSearch.h" />
-    <ClInclude Include="..\Source\HLSquad.h" />
-    <ClInclude Include="..\Source\HLState.h" />
-    <ClInclude Include="..\Source\HLStatistics.h" />
-    <ClInclude Include="..\Source\HLTranspositionTable.h" />
-    <ClInclude Include="..\Source\HLUnitData.h" />
     <ClInclude Include="..\Source\InformationManager.h" />
     <ClInclude Include="..\Source\Logger.h" />
     <ClInclude Include="..\Source\MapGrid.h" />
     <ClInclude Include="..\Source\MapTools.h" />
-    <ClInclude Include="..\Source\micromanagement\DetectorManager.h" />
-    <ClInclude Include="..\Source\micromanagement\MeleeManager.h" />
-    <ClInclude Include="..\Source\micromanagement\MicroManager.h" />
-    <ClInclude Include="..\Source\micromanagement\MicroUtil.h" />
-    <ClInclude Include="..\Source\micromanagement\RangedManager.h" />
-    <ClInclude Include="..\Source\micromanagement\TransportManager.h" />
+    <ClInclude Include="..\source\MeleeManager.h" />
+    <ClInclude Include="..\source\MicroManager.h" />
     <ClInclude Include="..\Source\OpeningBuildOrders.h" />
     <ClInclude Include="..\Source\Options.h" />
-    <ClInclude Include="..\Source\ReplayVisualizer.h" />
-    <ClInclude Include="..\Source\ScoutManager.h" />
+    <ClInclude Include="..\source\ProductionManager.h" />
+    <ClInclude Include="..\source\RangedManager.h" />
+    <ClInclude Include="..\source\ScoutManager.h" />
     <ClInclude Include="..\Source\SparCraftManager.h" />
     <ClInclude Include="..\Source\Squad.h" />
     <ClInclude Include="..\Source\SquadData.h" />
     <ClInclude Include="..\Source\SquadOrder.h" />
     <ClInclude Include="..\Source\StrategyManager.h" />
+    <ClInclude Include="..\source\TransportManager.h" />
     <ClInclude Include="..\Source\UABAssert.h" />
     <ClInclude Include="..\Source\UAlbertaBotModule.h" />
     <ClInclude Include="..\Source\UnitCommandData.h" />
     <ClInclude Include="..\Source\UnitCommandManager.h" />
     <ClInclude Include="..\Source\UnitData.h" />
-    <ClInclude Include="..\Source\Visualizer.h" />
+    <ClInclude Include="..\source\WorkerData.h" />
+    <ClInclude Include="..\source\WorkerManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
