--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -7,26 +7,11 @@
     <Filter Include="game\macro">
       <UniqueIdentifier>{a78e9ab8-4a81-4640-b6eb-f1eed3e4b1af}</UniqueIdentifier>
     </Filter>
-    <Filter Include="game\macro\search">
-      <UniqueIdentifier>{8ab386d6-170e-4360-8378-646341358a63}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="game\macro\data">
-      <UniqueIdentifier>{5749da37-fcc3-43aa-98d1-4401dfca191c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="game\macro\managers">
-      <UniqueIdentifier>{81fb5cf1-e45b-41d4-b1f3-744123bcb711}</UniqueIdentifier>
-    </Filter>
     <Filter Include="game\combat">
       <UniqueIdentifier>{8e8c1957-bc1d-4bc8-90b0-95beab19d8a9}</UniqueIdentifier>
     </Filter>
     <Filter Include="game\combat\micro">
       <UniqueIdentifier>{e5971e4e-7c6b-4f4e-9fbe-4a5247b3cf51}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="game\combat\micro\generic">
-      <UniqueIdentifier>{6a04cb27-8e36-4699-9d1c-397d715d37ba}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="game\combat\micro\squad">
-      <UniqueIdentifier>{32554737-6cf9-47c8-87c9-6db0b6ffcc51}</UniqueIdentifier>
     </Filter>
     <Filter Include="game\util">
       <UniqueIdentifier>{222db7e1-f821-4383-986a-83267e040564}</UniqueIdentifier>
@@ -40,17 +25,17 @@
     <Filter Include="module">
       <UniqueIdentifier>{b5d87a96-0443-4319-afc9-f457d890d031}</UniqueIdentifier>
     </Filter>
-    <Filter Include="extra">
-      <UniqueIdentifier>{f0cc82d6-1735-46ae-a722-c81699ab361d}</UniqueIdentifier>
-    </Filter>
     <Filter Include="common">
       <UniqueIdentifier>{849d54bf-a76a-4425-8399-099fbe0360c4}</UniqueIdentifier>
     </Filter>
     <Filter Include="sparcraft">
       <UniqueIdentifier>{6b8863f5-e2f1-4ee3-ad58-f8c6bf761cc6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="HighLevelSearch">
-      <UniqueIdentifier>{0b67884f-3d7a-4067-b2d6-fe2e588db502}</UniqueIdentifier>
+    <Filter Include="game\combat\squad">
+      <UniqueIdentifier>{32554737-6cf9-47c8-87c9-6db0b6ffcc51}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="game\macro\buildorders">
+      <UniqueIdentifier>{0984e4fa-2fbf-40e9-8c0d-304344df9718}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -78,59 +63,14 @@
     <ClCompile Include="..\Source\StrategyManager.cpp">
       <Filter>game\util\info</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\base\BuildingData.cpp">
-      <Filter>game\macro\data</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\base\BuildOrderQueue.cpp">
-      <Filter>game\macro\data</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\base\WorkerData.cpp">
-      <Filter>game\macro\data</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\base\BuildingManager.cpp">
-      <Filter>game\macro\managers</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\base\BuildingPlacer.cpp">
-      <Filter>game\macro\managers</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\base\BuildOrderGoalManager.cpp">
-      <Filter>game\macro\managers</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\base\WorkerManager.cpp">
-      <Filter>game\macro\managers</Filter>
-    </ClCompile>
     <ClCompile Include="..\Source\GameCommander.cpp">
       <Filter>game</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\micromanagement\DetectorManager.cpp">
-      <Filter>game\combat\micro\generic</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\micromanagement\MeleeManager.cpp">
-      <Filter>game\combat\micro\generic</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\base\ProductionManager.cpp">
-      <Filter>game\macro\managers</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\micromanagement\RangedManager.cpp">
-      <Filter>game\combat\micro\generic</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\ScoutManager.cpp">
-      <Filter>game\combat\micro\generic</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\micromanagement\TransportManager.cpp">
-      <Filter>game\combat\micro\generic</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\micromanagement\MicroManager.cpp">
-      <Filter>game\combat\micro</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\micromanagement\MicroUtil.cpp">
-      <Filter>game\combat\micro</Filter>
-    </ClCompile>
     <ClCompile Include="..\Source\Squad.cpp">
-      <Filter>game\combat\micro\squad</Filter>
+      <Filter>game\combat\squad</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\SquadData.cpp">
-      <Filter>game\combat\micro\squad</Filter>
+      <Filter>game\combat\squad</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\CombatSimulation.cpp">
       <Filter>game\combat</Filter>
@@ -139,15 +79,6 @@
       <Filter>game\util\info</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\UnitCommandData.cpp">
-      <Filter>game\util\info</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\ReplayVisualizer.cpp">
-      <Filter>extra</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\Visualizer.cpp">
-      <Filter>extra</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\OpeningBuildOrders.cpp">
       <Filter>game\util\info</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\Common.cpp">
@@ -165,35 +96,53 @@
     <ClCompile Include="..\Source\SparCraftManager.cpp">
       <Filter>sparcraft</Filter>
     </ClCompile>
+    <ClCompile Include="..\source\BuildingData.cpp">
+      <Filter>game\macro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\BuildingManager.cpp">
+      <Filter>game\macro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\BuildingPlacer.cpp">
+      <Filter>game\macro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\ProductionManager.cpp">
+      <Filter>game\macro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\WorkerData.cpp">
+      <Filter>game\macro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\WorkerManager.cpp">
+      <Filter>game\macro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\DetectorManager.cpp">
+      <Filter>game\combat\micro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\MeleeManager.cpp">
+      <Filter>game\combat\micro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\MicroManager.cpp">
+      <Filter>game\combat\micro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\RangedManager.cpp">
+      <Filter>game\combat\micro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\ScoutManager.cpp">
+      <Filter>game\combat\micro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\TransportManager.cpp">
+      <Filter>game\combat\micro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\OpeningBuildOrders.cpp">
+      <Filter>game\macro\buildorders</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\BuildOrderGoalManager.cpp">
+      <Filter>game\macro\buildorders</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\BuildOrderQueue.cpp">
+      <Filter>game\macro\buildorders</Filter>
+    </ClCompile>
     <ClCompile Include="..\Source\BOSSManager.cpp">
-      <Filter>game\macro\search</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\HLCombatCommander.cpp">
-      <Filter>HighLevelSearch</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\HLManager.cpp">
-      <Filter>HighLevelSearch</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\HLSearch.cpp">
-      <Filter>HighLevelSearch</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\HLState.cpp">
-      <Filter>HighLevelSearch</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\HLUnitData.cpp">
-      <Filter>HighLevelSearch</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\HLStatistics.cpp">
-      <Filter>HighLevelSearch</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\HLSquad.cpp">
-      <Filter>HighLevelSearch</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\HLTranspositionTable.cpp">
-      <Filter>HighLevelSearch</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\CombatPredictor.cpp">
-      <Filter>game\combat</Filter>
+      <Filter>game\macro\buildorders</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -202,9 +151,6 @@
     </ClInclude>
     <ClInclude Include="..\Source\UAlbertaBotModule.h">
       <Filter>module</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\EnhancedInterface.hpp">
-      <Filter>extra</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\MapTools.h">
       <Filter>game\util\map</Filter>
@@ -221,65 +167,17 @@
     <ClInclude Include="..\Source\StrategyManager.h">
       <Filter>game\util\info</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\base\MetaType.h">
-      <Filter>game\macro\data</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\base\BuildingData.h">
-      <Filter>game\macro\data</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\base\BuildOrderQueue.h">
-      <Filter>game\macro\data</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\base\WorkerData.h">
-      <Filter>game\macro\data</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\base\WorkerManager.h">
-      <Filter>game\macro\managers</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\base\BuildingManager.h">
-      <Filter>game\macro\managers</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\base\BuildingPlacer.h">
-      <Filter>game\macro\managers</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\base\BuildOrderGoalManager.h">
-      <Filter>game\macro\managers</Filter>
-    </ClInclude>
     <ClInclude Include="..\Source\GameCommander.h">
       <Filter>game</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\micromanagement\MeleeManager.h">
-      <Filter>game\combat\micro\generic</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\micromanagement\DetectorManager.h">
-      <Filter>game\combat\micro\generic</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\base\ProductionManager.h">
-      <Filter>game\macro\managers</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\micromanagement\TransportManager.h">
-      <Filter>game\combat\micro\generic</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\micromanagement\RangedManager.h">
-      <Filter>game\combat\micro\generic</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\ScoutManager.h">
-      <Filter>game\combat\micro\generic</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\micromanagement\MicroUtil.h">
-      <Filter>game\combat\micro</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\micromanagement\MicroManager.h">
-      <Filter>game\combat\micro</Filter>
-    </ClInclude>
     <ClInclude Include="..\Source\SquadOrder.h">
-      <Filter>game\combat\micro\squad</Filter>
+      <Filter>game\combat\squad</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\Squad.h">
-      <Filter>game\combat\micro\squad</Filter>
+      <Filter>game\combat\squad</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\SquadData.h">
-      <Filter>game\combat\micro\squad</Filter>
+      <Filter>game\combat\squad</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\DistanceMap.hpp">
       <Filter>game\util\map</Filter>
@@ -288,15 +186,6 @@
       <Filter>game\util\info</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\UnitCommandData.h">
-      <Filter>game\util\info</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\ReplayVisualizer.h">
-      <Filter>extra</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\Visualizer.h">
-      <Filter>extra</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\OpeningBuildOrders.h">
       <Filter>game\util\info</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\Common.h">
@@ -314,38 +203,56 @@
     <ClInclude Include="..\Source\SparCraftManager.h">
       <Filter>sparcraft</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\BOSSManager.h">
-      <Filter>game\macro\search</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\HLCombatCommander.h">
-      <Filter>HighLevelSearch</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\HLManager.h">
-      <Filter>HighLevelSearch</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\HLSearch.h">
-      <Filter>HighLevelSearch</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\HLState.h">
-      <Filter>HighLevelSearch</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\HLUnitData.h">
-      <Filter>HighLevelSearch</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\HLStatistics.h">
-      <Filter>HighLevelSearch</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\HLSquad.h">
-      <Filter>HighLevelSearch</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\HLTranspositionTable.h">
-      <Filter>HighLevelSearch</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\CombatPredictor.h">
-      <Filter>game\combat</Filter>
-    </ClInclude>
     <ClInclude Include="..\Source\CombatSimulation.h">
       <Filter>game\combat</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\BuildingData.h">
+      <Filter>game\macro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\BuildingManager.h">
+      <Filter>game\macro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\BuildingPlacer.h">
+      <Filter>game\macro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\ProductionManager.h">
+      <Filter>game\macro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\WorkerData.h">
+      <Filter>game\macro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\WorkerManager.h">
+      <Filter>game\macro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\DetectorManager.h">
+      <Filter>game\combat\micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\TransportManager.h">
+      <Filter>game\combat\micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\MeleeManager.h">
+      <Filter>game\combat\micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\MicroManager.h">
+      <Filter>game\combat\micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\RangedManager.h">
+      <Filter>game\combat\micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\ScoutManager.h">
+      <Filter>game\combat\micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\OpeningBuildOrders.h">
+      <Filter>game\macro\buildorders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\BuildOrderGoalManager.h">
+      <Filter>game\macro\buildorders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\BuildOrderQueue.h">
+      <Filter>game\macro\buildorders</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\BOSSManager.h">
+      <Filter>game\macro\buildorders</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
