added configuration file

--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="..\source\BuildingData.cpp" />
     <ClCompile Include="..\source\BuildingManager.cpp" />
     <ClCompile Include="..\source\BuildingPlacer.cpp" />
+    <ClCompile Include="..\source\BuildOrder.cpp" />
     <ClCompile Include="..\source\BuildOrderGoalManager.cpp" />
     <ClCompile Include="..\source\BuildOrderQueue.cpp" />
     <ClCompile Include="..\Source\CombatSimulation.cpp" />
@@ -130,6 +131,7 @@
     <ClCompile Include="..\Source\MapGrid.cpp" />
     <ClCompile Include="..\Source\MapTools.cpp" />
     <ClCompile Include="..\source\MeleeManager.cpp" />
+    <ClCompile Include="..\source\MetaType.cpp" />
     <ClCompile Include="..\source\MicroManager.cpp" />
     <ClCompile Include="..\Source\OpeningBuildOrders.cpp" />
     <ClCompile Include="..\Source\Options.cpp" />
@@ -154,6 +156,7 @@
     <ClInclude Include="..\source\BuildingData.h" />
     <ClInclude Include="..\source\BuildingManager.h" />
     <ClInclude Include="..\source\BuildingPlacer.h" />
+    <ClInclude Include="..\source\BuildOrder.h" />
     <ClInclude Include="..\source\BuildOrderGoalManager.h" />
     <ClInclude Include="..\source\BuildOrderQueue.h" />
     <ClInclude Include="..\Source\CombatSimulation.h" />
@@ -167,6 +170,7 @@
     <ClInclude Include="..\Source\MapGrid.h" />
     <ClInclude Include="..\Source\MapTools.h" />
     <ClInclude Include="..\source\MeleeManager.h" />
+    <ClInclude Include="..\source\MetaType.h" />
     <ClInclude Include="..\source\MicroManager.h" />
     <ClInclude Include="..\Source\OpeningBuildOrders.h" />
     <ClInclude Include="..\Source\Options.h" />
